# spake2-cffi

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/: build_spake2.py  spake2.py  test.py
src/spake2/: __init__.py  build_spake2.py  spake2.py
