[metadata]
name = spake2-cffi
version = 1.0.0
author = Davide TheZero
author_email = io@thezero.org
description = spake2-c python CFFI bindings.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
url = https://github.com/TheZ3ro/spake2-cffi
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Security :: Cryptography
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8
zip_safe = False
package_dir =
    =src
packages = find:
# `install_requires` must be kept in sync with `pyproject.toml`
install_requires =
    cffi >=1.0.0

[options.packages.find]
where = src
exclude =
    _cffi_src
    _cffi_src.*
